[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/NixGUI/SystemMenuSaveList.gd" type="Script" id=1]


[node name="SaveList" type="VBoxContainer"]
anchor_left = 0.222835
anchor_top = 0.181579
anchor_right = 0.781102
anchor_bottom = 0.852632
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="New" type="Button" parent="."]
margin_left = 300.0
margin_right = 407.0
margin_bottom = 37.0
size_flags_horizontal = 4
text = "New Data"

[node name="SaveList" type="ItemList" parent="."]
margin_top = 45.0
margin_right = 708.0
margin_bottom = 465.0
size_flags_vertical = 3
allow_rmb_select = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Close" type="Button" parent="."]
margin_left = 318.0
margin_top = 473.0
margin_right = 389.0
margin_bottom = 510.0
size_flags_horizontal = 4
text = "Close"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="New" to="." method="_on_New_pressed"]
[connection signal="item_activated" from="SaveList" to="." method="_on_SaveList_item_activated"]
[connection signal="item_rmb_selected" from="SaveList" to="." method="_on_SaveList_item_rmb_selected"]
[connection signal="pressed" from="Close" to="." method="_on_Close_pressed"]
